[ANZACATT-12] Updating spacing between lists, white external icon, removed underlines, fixed some excess padding on the body.

--- a/docroot/sites/default/themes/custom/anzacatt/src/sass/_mixins.scss
+++ b/docroot/sites/default/themes/custom/anzacatt/src/sass/_mixins.scss
@@ -68,7 +68,7 @@
   clip: auto;
   height: auto;
   width: auto;
-  overflow: auto;
+  overflow: initial;
 }
 
 @mixin transition-fade() {
