--- a/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_layout.scss
+++ b/docroot/sites/default/themes/custom/anzacatt/src/sass/page/_layout.scss
@@ -5,6 +5,9 @@ html {
   &.large-fonts {
     font-size: $large-font-size;
   }
+  &.video {
+    margin-bottom: 0;
+  }
 }
 
 // =========================================================
